# SOUDAI_model_training

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: model_scratch_file.ipynb  train_notebook.ipynb
scripts/: train.py
src/: config.py  utils.py
src/training/: data.py  encoder.py  io.py  models.py  trainer.py  training_config.py  types.py
